# router-platform

./: .gitignore  README.md
router-app/: pyproject.toml
router-app/config/: router.example.yaml
router-app/src/router/: apply.py  config.py  dhcp.py  firewall.py  interfaces.py  routing.py  show.py  validate.py
